--- a/examples/samples/response/response.html
+++ b/examples/samples/response/response.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>index</title>
+  <title>response</title>
 </head>
 <body>
-  <ul>
-    <li><a href="get.html">GET</a></li>
-    <li><a href="post.html">POST</a></li>
-    <li><a href="response.html">response</a></li>
-  </ul>
+  response
 </body>
 </html>
