1. create request mixins 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <ul>
+      <li><a href="axios.html">axios</a></li>
     <li><a href="get.html">GET</a></li>
     <li><a href="post.html">POST</a></li>
     <li><a href="response.html">response</a></li>
     <li><a href="error.html">error</a></li>
+    <li><a href="mixins.html">mixins</a></li>
   </ul>
 </body>
 </html>
