1. add request&response interceptors 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>index</title>
-</head>
-<body>
-  <ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>index</title>
+  </head>
+  <body>
+    <ul>
       <li><a href="axios.html">axios</a></li>
-    <li><a href="get.html">GET</a></li>
-    <li><a href="post.html">POST</a></li>
-    <li><a href="response.html">response</a></li>
-    <li><a href="error.html">error</a></li>
-    <li><a href="mixins.html">mixins</a></li>
-  </ul>
-</body>
+      <li><a href="get.html">GET</a></li>
+      <li><a href="post.html">POST</a></li>
+      <li><a href="response.html">response</a></li>
+      <li><a href="error.html">error</a></li>
+      <li><a href="mixins.html">mixins</a></li>
+      <li><a href="interceptors.html">interceptors</a></li>
+    </ul>
+  </body>
 </html>
