1. add config merge 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
       <li><a href="error.html">error</a></li>
       <li><a href="mixins.html">mixins</a></li>
       <li><a href="interceptors.html">interceptors</a></li>
+      <li><a href="mergeConfig.html">mergeConfig</a></li>
     </ul>
   </body>
 </html>
