add 'create' API to create intansce

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
       <li><a href="mixins.html">mixins</a></li>
       <li><a href="interceptors.html">interceptors</a></li>
       <li><a href="mergeConfig.html">mergeConfig</a></li>
+      <li><a href="create.html">create</a></li>
     </ul>
   </body>
 </html>
