add cancelToken and demo

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,7 @@
       <li><a href="interceptors.html">interceptors</a></li>
       <li><a href="mergeConfig.html">mergeConfig</a></li>
       <li><a href="create.html">create</a></li>
+      <li><a href="cancelToken.html">cancelToken</a></li>
     </ul>
   </body>
 </html>
