add withCredentials and example

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,7 @@
       <li><a href="mergeConfig.html">mergeConfig</a></li>
       <li><a href="create.html">create</a></li>
       <li><a href="cancelToken.html">cancelToken</a></li>
+      <li><a href="withCredentials.html">withCredentials</a></li>
     </ul>
   </body>
 </html>
