add xsrf defence and example

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
       <li><a href="create.html">create</a></li>
       <li><a href="cancelToken.html">cancelToken</a></li>
       <li><a href="withCredentials.html">withCredentials</a></li>
+      <li><a href="xsrf.html">xsrf</a></li>
     </ul>
   </body>
 </html>
