--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,7 @@
       <li><a href="cancelToken.html">cancelToken</a></li>
       <li><a href="withCredentials.html">withCredentials</a></li>
       <li><a href="xsrf.html">xsrf</a></li>
+      <li><a href="progress.html">progress</a></li>
     </ul>
   </body>
 </html>
