--- a/examples/index.html
+++ b/examples/index.html
@@ -21,6 +21,7 @@
       <li><a href="withCredentials.html">withCredentials</a></li>
       <li><a href="xsrf.html">xsrf</a></li>
       <li><a href="progress.html">progress</a></li>
+      <li><a href="auth.html">auth</a></li>
     </ul>
   </body>
 </html>
