1. add validateStatus 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
       <li><a href="xsrf.html">xsrf</a></li>
       <li><a href="progress.html">progress</a></li>
       <li><a href="auth.html">auth</a></li>
+      <li><a href="validateStatus.html">validateStatus</a></li>
     </ul>
   </body>
 </html>
