1. add paramsSerializer 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,6 +23,7 @@
       <li><a href="progress.html">progress</a></li>
       <li><a href="auth.html">auth</a></li>
       <li><a href="validateStatus.html">validateStatus</a></li>
+      <li><a href="paramsSerializer.html">paramsSerializer</a></li>
     </ul>
   </body>
 </html>
