1. add baseURL 2. add example

--- a/examples/index.html
+++ b/examples/index.html
@@ -24,6 +24,7 @@
       <li><a href="auth.html">auth</a></li>
       <li><a href="validateStatus.html">validateStatus</a></li>
       <li><a href="paramsSerializer.html">paramsSerializer</a></li>
+      <li><a href="baseURL.html">baseURL</a></li>
     </ul>
   </body>
 </html>
