--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,7 @@
       <li><a href="validateStatus.html">validateStatus</a></li>
       <li><a href="paramsSerializer.html">paramsSerializer</a></li>
       <li><a href="baseURL.html">baseURL</a></li>
+      <li><a href="getURI.html">getURI</a></li>
     </ul>
   </body>
 </html>
